Update WebConfig.java